# Fluorite

./: .gitignore  Cargo.toml  README.md  config  config.fcl  keywords  logs.txt  start.sh
.github/workflows/: aarch64_unknown_linux.yml  x86_64_unknown_linux.yml
src/: lib.rs  main.rs
src/commands/: ping.rs
src/moderation/: automod.rs  mod.rs  moderation.rs
src/moderation/essential/: announcer.rs  logger.rs  mod.rs
src/moderation/functions/: announce.rs  direct_message.rs  logger.rs  mod.rs  mute.rs
