[package]
name = "fluorite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
owo-colors = "3.5.0"
poise = "0.5.5"
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

[patch.crates-io]
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }
poise =    { git = "https://github.com/serenity-rs/poise",    branch = "serenity-next" }